Remove the dashes to fix the bug of the image not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ nav a{
     margin: 0 auto;
     position: relative;
     top: 60px;  
-    background:url(/images/generated-7687508.jpg) center center;
+    background:url(images/generated-7687508.jpg) center center;
     background-size: cover;
 }
 
@@ -101,7 +101,7 @@ nav a{
     margin: 0 75px 0 75px;
     border-radius: 25px;
     border: 2px solid rgb(247, 247, 247);
-    background:url(/images//robert-duncanson-84959.jpg) -250px no-repeat;
+    background:url(images//robert-duncanson-84959.jpg) -250px no-repeat;
     background-size: cover;
 }
 
